stop phone from wrapping

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -80,7 +80,7 @@ a {
         font-size:1em;
     }
     #phoneNumber{
-        font-size:1.5em;
+        font-size:1.75em;
     }
     #top {
         padding: 1.2em; 
